# distsys-homework

./: .gitignore  .gitlab-ci.yml  README.md  base-simple.dockerfile  base.dockerfile  create-hw.sh
.gitlab-ci/: 0-templates.yml  1-guarantees.yml  10-practice-security.yml  2-practice-grpc.yml  3-http.yml  4-broadcast.yml  5-practice-messaging.yml  6-membership.yml  7-kv-sharding.yml  8-kv-replication.yml  9-kv-replication-v2.yml  base-image.yml
1-guarantees/: Dockerfile  readme.md  solution.md  solution.py
1-guarantees/test/: Cargo.toml
10-practice-security/: README.md
10-practice-security/auth/: Dockerfile  go.mod  main.go
10-practice-security/kv/: Dockerfile  go.mod  main.go
10-practice-security/tests/: Dockerfile
2-practice-grpc/: README.md  docker-compose.yml
2-practice-grpc/messenger/: README  client.dockerfile  server.dockerfile
2-practice-grpc/tests/: test_server.py
3-http/: README.md  launch.sh
3-http/server/: Dockerfile  README.md  http_messages.py  server.py
3-http/tests/: compare.go  go.mod  go.sum  hw_test.go  query.go
4-broadcast/: Dockerfile  readme.md  solution.md  solution.py
4-broadcast/test/: Cargo.toml
5-practice-messaging/: README.md  docker-compose.yml
5-practice-messaging/server/: requirements.txt  server.py
6-membership/: Dockerfile  readme.md  solution.md  solution.py
6-membership/test/: Cargo.toml
6-membership/test/src/: main.rs
7-kv-sharding/: Dockerfile  readme.md  solution.md  solution.py
8-kv-replication/: Dockerfile  readme.md  solution.py
9-kv-replication-v2/: Dockerfile  readme.md  solution.py
(+19 files in other folders)
